fixed issue with profile icon overlapping edge of page, + added padding to buttons on side nav menu

--- a/sourcecode/my-app/src/layouts/MainLayout.css
+++ b/sourcecode/my-app/src/layouts/MainLayout.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 220px 1fr;
     grid-template-rows: auto 1fr;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
 }
